# arma-helper

./: .gitignore  Armagetron.cbp  CMakeLists.txt  Dedicated.cbp  HOW-TO-COMPILE.txt  configure.ac
config/: chattriggers.txt  chattriggers_hybrid.txt  chattriggers_ollama.txt  default.cfg  settings.cfg  settings_visual.cfg
language/: deutsch.txt  english_base.txt  polish.txt  polish_transliterated.txt  spanish.txt
src/: Makefile.am
src/engine/: eBannedWords.cpp  eCamera.cpp  eCamera.h  eChatBot.cpp  eChatBot.h  eChatCommands.cpp  eChatCommands.h  eCoord.h  eDebugLine.cpp  eDebugLine.h  eDisplay.cpp  eFloor.cpp  eFloor.h  eGameObject.cpp  eGameObject.h  eGrid.cpp  eGrid.h  eNetGameObject.cpp  ePath.cpp  ePath.h  ePlayer.cpp  ePlayer.h  ePlayerStats.cpp  ePlayerStats.h  eSensor.cpp  eSensor.h  eSound.cpp  eTeam.cpp  eTeam.h  eTimer.cpp  eTimer.h  eVoter.cpp  eVoter.h
src/network/: nConfig.cpp  nConfig.h  nNetObject.cpp  nNetObject.h  nNetwork.cpp  nNetwork.h  nServerInfo.cpp  nServerInfo.h  nSocket.cpp
src/render/: rConsole.cpp  rConsole.h  rConsoleGraph.cpp  rDisplayList.cpp  rFont.cpp  rFont.h  rScreen.cpp  rScreen.h  rSysdep.cpp  rViewport.cpp
src/tools/: tArray.h  tColor.cpp  tColor.h  tConfiguration.cpp  tConfiguration.h  tConsole.h  tDatabase.h  tDirectories.cpp  tDirectories.h  tError.cpp  tLocale.cpp  tLocale.h  tMath.h  tRandom.cpp  tRandom.h  tString.cpp  tString.h  tSysTime.cpp  tSysTime.h
src/tron/: gAIBase.cpp  gAIBase.h  gAICharacter.cpp  gAICharacter.h  gAINavigator.cpp  gAINavigator.h  gArmagetron.cpp  gCamera.cpp  gCamera.h  gCycle.cpp  gCycle.h  (+28 more)
(+31 files in other folders)
